--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,8 @@
     "chart.js": "2.8.0",
     "core-js": "2.6.5",
     "flatpickr": "4.5.7",
+    "leaflet": "^1.4.0",
+    "mdbvue": "^5.2.0",
     "nouislider": "13.1.4",
     "register-service-worker": "1.6.2",
     "vue": "2.6.6",
@@ -23,6 +25,7 @@
     "vue-clipboard2": "0.3.0",
     "vue-flatpickr-component": "8.1.2",
     "vue-router": "3.0.1",
+    "vue2-leaflet": "^2.1.1",
     "vue2-transitions": "0.3.0"
   },
   "devDependencies": {
