--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,7 +18,8 @@
     "flatpickr": "4.5.7",
     "leaflet": "^1.4.0",
     "mdbvue": "^5.2.0",
-    "nouislider": "13.1.4",
+    "moment": "^2.24.0",
+    "nouislider": "^13.1.4",
     "register-service-worker": "1.6.2",
     "vue": "2.6.6",
     "vue-chartjs": "3.4.2",
