--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -24,6 +24,7 @@
     "vue": "2.6.6",
     "vue-chartjs": "3.4.2",
     "vue-clipboard2": "0.3.0",
+    "vue-color": "^2.7.0",
     "vue-flatpickr-component": "8.1.2",
     "vue-router": "3.0.1",
     "vue2-leaflet": "^2.1.1",
