--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,6 +11,7 @@
     "deploy": "npm run build:all && sudo gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "4.3.1",
     "bootstrap-vue": "2.0.0-rc.15",
     "chart.js": "2.8.0",
@@ -21,6 +22,7 @@
     "mdbvue": "^5.2.0",
     "moment": "^2.24.0",
     "nouislider": "^13.1.4",
+    "qs": "^6.7.0",
     "register-service-worker": "1.6.2",
     "vue": "2.6.6",
     "vue-chartjs": "3.4.2",
