--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -25,6 +25,7 @@
     "qs": "^6.7.0",
     "register-service-worker": "1.6.2",
     "vue": "2.6.6",
+    "vue-blu": "^0.1.9",
     "vue-chartjs": "3.4.2",
     "vue-clipboard2": "0.3.0",
     "vue-color": "^2.7.0",
