--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "4.3.1",
-    "bootstrap-vue": "2.0.0-rc.15",
+    "bootstrap-vue": "^2.0.0-rc.15",
     "chart.js": "2.8.0",
     "core-js": "2.6.5",
     "flatpickr": "4.5.7",
