chore: add backendAPI to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,6 @@ fabric.properties
 # !.vscode/tasks.json
 # !.vscode/launch.json
 # !.vscode/extensions.json
+
+### backend API
+src/frontend/src/backendAPI.js
